<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsMenuFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:gravity="center"
                    android:text="@string/clear_patients"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/clear_all_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/clear"
                    android:textAlignment="viewStart"
                    android:textColor="@color/button_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:gravity="center"
                    android:text="@string/clear_entries"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/clear_all_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/clear"
                    android:textColor="@color/button_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:gravity="center"
                    android:text="@string/add_vaccine"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/vaccination_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vaccine_name_hint"
                    android:inputType="text"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/vaccination_component"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:checked="true"
                    android:text="@string/two_component"
                    android:textColor="@color/text_primary" />

                <Button
                    android:id="@+id/save_new_vaccine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/save_button"
                    android:textColor="@color/button_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:gravity="center"
                    android:text="@string/vaccine_list"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/select_vaccines"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <Button
                    android:id="@+id/clear_all_vaccination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/clear"
                    android:textColor="@color/button_text" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
