<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddNewEntryFragment"
        android:background="@color/primary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_a_patient"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"/>

                <Spinner
                    android:id="@+id/patient_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:entries="@array/spinner_test"
                    android:layout_marginTop="12dp"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_vaccine"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <Spinner
                    android:id="@+id/vaccination_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:entries="@array/spinner_test"
                    android:layout_marginTop="12dp"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_component"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <Spinner
                    android:id="@+id/component_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:entries="@array/spinner_test"
                    android:layout_marginTop="12dp"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date_and_time_of_vaccine"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:autofillHints="@string/hint_date"
                    android:background="@android:drawable/editbox_background"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/hint_date"
                    android:inputType="date"
                    android:padding="10dp"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:autofillHints="@string/hint_time"
                    android:background="@android:drawable/editbox_background"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/hint_time"
                    android:inputType="time"
                    android:padding="10dp"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/save_entry"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/button_background"
                    android:padding="12dp"
                    android:text="@string/save_button"
                    android:textColor="@color/button_text"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
