<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenuFragment"
        android:background="@color/primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="16dp">

                <Button
                    android:id="@+id/newPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_patient"
                    android:textSize="16sp"
                    android:textColor="@color/button_text"
                    android:backgroundTint="@color/button_background"
                    android:padding="12dp"
                    android:layout_marginTop="12dp"/>

                <Button
                    android:id="@+id/newEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_entry"
                    android:textSize="16sp"
                    android:textColor="@color/button_text"
                    android:backgroundTint="@color/button_background"
                    android:padding="12dp"
                    android:layout_marginTop="12dp"/>

                <Button
                    android:id="@+id/selectAllEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/look_all_entry"
                    android:textSize="16sp"
                    android:textColor="@color/button_text"
                    android:backgroundTint="@color/button_background"
                    android:padding="12dp"
                    android:layout_marginTop="12dp"/>

                <Button
                    android:id="@+id/selectAllPatients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/look_all_patients"
                    android:textSize="16sp"
                    android:textColor="@color/button_text"
                    android:backgroundTint="@color/button_background"
                    android:padding="12dp"
                    android:layout_marginTop="12dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/settings_menu"
                android:layout_width="105dp"
                android:layout_height="64dp"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:backgroundTint="@color/button_background"
                android:padding="12dp"
                android:text="@string/settings"
                android:textColor="@color/button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back"
                app:layout_constraintWidth="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
